# AI574-Team1

./: README.md
smishing/: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
smishing/notebooks/: API_GPT-4o mini.ipynb  BERT_Analysis_Team1.ipynb  BERT_base_Botzer.ipynb  NOTEBOOK_TEMPLATE_FOR_AI574.ipynb  smishing_classification.ipynb
smishing/smishing/: __init__.py  dataset.py  features.py  plots.py
smishing/smishing/modeling/: predict.py  train.py
